@@ -1,105 +1,58 @@
 package org.gd.ddcs.flare.misp;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Collections;
 
 import org.quartz.DisallowConcurrentExecution;
 import org.quartz.Job;
 import org.quartz.JobExecutionContext;
-import org.quartz.JobExecutionException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.RestTemplate;
 
+/**
+ * The 'Job' interface basically wants us to to define what code must be executed when it's time to do something.
+ */
 @DisallowConcurrentExecution
 public class InitializeQuartzJob implements Job
 {
     private static Logger log = LoggerFactory.getLogger(InitializeQuartzJob.class);
-	String urlStr = Config.getProperty("mtc.baseurl") + "?processType=" + Config.getProperty("mtc.processtype");
+	private String urlStr = Config.getProperty("mtc.baseurl") + "?processType=" + Config.getProperty("mtc.processtype");
 
-	public void execute(JobExecutionContext context)
-	throws JobExecutionException {
-		InputStream is = null;
-		InputStreamReader isr = null;
-		BufferedReader br = null;
+	/**
+	 * This method defines the 'job' that the Quartz Scheduler will execute
+	 *
+	 * This job generates an HTTP request (to this same REST service)
+	 * It will start a one-time poll via CTI Toolkit, to search for STIX on the TAXI Server,
+	 * convert it to MISP event and then upload it to the MISP Server.
+	 * (Assuming that ‘mtc.processtype’ config property is set to  the string ‘stixToMisp’)
+	 */
+	public void execute(JobExecutionContext context) throws RuntimeException {
 		try {
-			URL url = new URL(urlStr);
-			
-			HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-			conn.setRequestMethod("GET");
-			conn.setRequestProperty("Accept", "application/json");
+			URI uri = new URI(urlStr);
+			RestTemplate restTemplate = new RestTemplate();
+			HttpHeaders headers = new HttpHeaders();
+			headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
+			HttpEntity<String> entity = new HttpEntity<>("parameters", headers);
+			ResponseEntity<String> response = restTemplate.exchange(uri, HttpMethod.GET, entity, String.class);
 
-			if (conn.getResponseCode() != 200) {
-				throw new RuntimeException("Failed : HTTP error code : "
-						+ conn.getResponseCode());
+			if (response.getStatusCode() == HttpStatus.OK) {
+				log.info("Received OK status from {}", urlStr);
+			} else {
+				log.error("Received status code {}", response.getStatusCodeValue());
 			}
 
-			is = conn.getInputStream();
-			isr = new InputStreamReader(is);
-			br = new BufferedReader(isr);
+			log.info("Initialize quartz received response body: {}",response.getBody());
 
-			String output;
-			//log.info("Output from Server .... \n");
-			while ((output = br.readLine()) != null) {
-				log.info(output);
-			}
-
-			br.close();
-			isr.close();
-			is.close();
-			conn.disconnect();
-
-		  } catch (MalformedURLException e) {
-			  log.error("ERROR: MalformedURLException");
-		  } catch (IOException e) {
-			  log.error("ERROR: IOException");
+		  } catch (URISyntaxException e) {
+			  log.error("Error: Malformed URL: {} {}", urlStr, e.getMessage());
 		  }
-		  finally{
-			if(br != null) {
-				safeCloseBR(br);
-			}
-			
-			if(isr != null) {
-				safeCloseISR(isr);
-			}
-			
-			if(is != null) {
-				safeCloseIS(is);
-			}
-		}
-	}
-	
-	private static void safeCloseBR(BufferedReader br) {
-		if (br != null) {
-			try {
-				br.close();
-			} catch (IOException e) {
-				log.error("safeCloseBR",e);
-			}
-		}
-	}
-	
-	private static void safeCloseIS(InputStream is) {
-		if (is != null) {
-			try {
-				is.close();
-			} catch (IOException e) {
-				log.error("safeCloseIS",e);
-			}
-		}
-	}
-	
-	private static void safeCloseISR(InputStreamReader isr) {
-		if (isr != null) {
-			try {
-				isr.close();
-			} catch (IOException e) {
-				log.error("safeCloseISR",e);
-			}
-		}
 	}
 }
